# basecode

./: .gitignore  CLAUDE.md  README.md  arguments.py  pyproject.toml  requirements.txt  run_tests.py  test.py  train.py
config/: config.py
src/data/: collate.py  collator.py  dataset.py  loader.py  utils.py
src/models/: base_layers.py  base_models.py  model.py
src/trainer/: base_trainer.py  main_trainer.py
src/utils/: checkpoint.py  logger.py  loss.py  metrics.py  visualization.py
tests/: test_data_pipeline.py  test_trainer.py  test_utils.py
